--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -64,7 +64,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
         android:layout_marginLeft="40dp"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="70dp"
         android:layout_marginEnd="40dp"
         android:layout_marginRight="40dp"
         android:drawableEnd="@drawable/ic_account_circle_black_24dp"
@@ -73,6 +73,7 @@
         android:hint="Endereço email"
         android:inputType="textEmailAddress"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline2" />
 
@@ -80,25 +81,26 @@
         android:id="@+id/fieldLoginSenha"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="15dp"
         android:drawableEnd="@drawable/ic_lock_outline_black_24dp"
+        android:drawableRight="@drawable/ic_lock_outline_black_24dp"
         android:ems="10"
         android:hint="Senha"
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="@+id/fieldLoginEmail"
         app:layout_constraintStart_toStartOf="@+id/fieldLoginEmail"
-        app:layout_constraintTop_toBottomOf="@+id/fieldLoginEmail"
-        android:drawableRight="@drawable/ic_lock_outline_black_24dp" />
+        app:layout_constraintTop_toBottomOf="@+id/fieldLoginEmail" />
 
     <Button
         android:id="@+id/buttonEntrar"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
         android:layout_marginStart="70dp"
         android:layout_marginLeft="70dp"
+        android:layout_marginTop="60dp"
         android:layout_marginEnd="70dp"
         android:layout_marginRight="70dp"
-        android:layout_marginBottom="30dp"
+        android:layout_marginBottom="5dp"
         android:background="@color/colorPrimary"
         android:text="Entrar"
         android:textColor="@android:color/background_light"
@@ -107,6 +109,7 @@
         app:layout_constraintBottom_toTopOf="@+id/guideline4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/fieldLoginSenha" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
