--- a/app/src/main/res/layout/activity_cadastro_usuario.xml
+++ b/app/src/main/res/layout/activity_cadastro_usuario.xml
@@ -36,7 +36,7 @@
                 android:text="@string/cadNome" />
 
             <EditText
-                android:id="@+id/fieldNome"
+                android:id="@+id/fieldEditNome"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
@@ -58,7 +58,7 @@
                 android:text="@string/cadCep" />
 
             <EditText
-                android:id="@+id/fieldCEP"
+                android:id="@+id/fieldEditCEP"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
@@ -80,7 +80,7 @@
                 android:text="@string/cadEmail" />
 
             <EditText
-                android:id="@+id/fieldLoginEmail"
+                android:id="@+id/fieldEmail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
@@ -102,7 +102,7 @@
                 android:text="@string/cadSenha" />
 
             <EditText
-                android:id="@+id/fieldLoginSenha"
+                android:id="@+id/fieldSenha"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
