--- a/app/src/main/res/layout/activity_cadastro_usuario.xml
+++ b/app/src/main/res/layout/activity_cadastro_usuario.xml
@@ -7,9 +7,7 @@
     tools:context=".Views.CadastroUsuario">
 
     <include
-        layout="@layout/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"></include>
+        layout="@layout/toolbar"></include>
 
     <ScrollView
         android:layout_width="match_parent"
