Colocando logo do sistema e criando classe Conversas

--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -11,6 +11,6 @@
 
     <item android:id="@+id/menu_chat"
         android:icon="@drawable/ic_chat_black_24dp"
-        android:title="Bate-Bapo" />
+        android:title="Conversas" />
 
 </menu>
