--- a/app/src/main/res/layout/activity_conversas.xml
+++ b/app/src/main/res/layout/activity_conversas.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Conversas">
+    tools:context=".Views.Conversas">
 
     <include
         layout="@layout/toolbar"></include>
