--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -59,7 +59,7 @@
         app:layout_constraintGuide_end="1dp" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/imageViewLogo"
         android:layout_width="200dp"
         android:layout_height="157dp"
         android:layout_marginTop="25dp"
