Ajuste tamanho icones tela chat

--- a/app/src/main/res/layout/content_chat.xml
+++ b/app/src/main/res/layout/content_chat.xml
@@ -62,6 +62,7 @@
             android:clickable="true"
             app:backgroundTint="@color/colorPrimary"
             app:fabSize="auto"
+            app:maxImageSize="30dp"
             app:srcCompat="@drawable/ic_send_white_24dp" />
     </LinearLayout>
 </LinearLayout>
