Implementando funcionalidade de Redefinição de Senha na tela de Login e criando tela de Conversas

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,16 +7,29 @@
     tools:context=".Views.MainActivity">
 
     <TextView
+        android:id="@+id/textRecuperarSenha"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/esqueceuSenha"
+        android:textColor="#808080"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/textRegistrarButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonEntrar"
+        app:layout_constraintVertical_bias="0.08" />
+
+    <TextView
         android:id="@+id/textRegistrarButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="15dp"
+        android:layout_marginBottom="10dp"
         android:text="@string/registrarButton"
         android:textColor="#808080"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/guideline5"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.499"
         app:layout_constraintStart_toStartOf="parent" />
 
     <androidx.constraintlayout.widget.Guideline
@@ -109,7 +122,7 @@
         android:layout_height="48dp"
         android:layout_marginStart="70dp"
         android:layout_marginLeft="70dp"
-        android:layout_marginTop="95dp"
+        android:layout_marginTop="96dp"
         android:layout_marginEnd="70dp"
         android:layout_marginRight="70dp"
         android:background="@color/colorPrimary"
