tela adicionar jogo

--- a/app/src/main/res/layout/activity_adicionar_jogo.xml
+++ b/app/src/main/res/layout/activity_adicionar_jogo.xml
@@ -10,14 +10,14 @@
         android:id="@+id/include2"
         layout="@layout/toolbar"></include>
 
-    <Spinner
-        android:id="@+id/spinner"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="70dp"
+    <ImageView
+        android:id="@+id/gameImage"
+        android:layout_width="194dp"
+        android:layout_height="192dp"
+        android:layout_marginTop="90dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/include2" />
+        app:layout_constraintTop_toTopOf="@+id/include2"
+        app:srcCompat="@drawable/game_car" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
