--- a/app/src/main/res/layout/activity_conversas.xml
+++ b/app/src/main/res/layout/activity_conversas.xml
@@ -4,10 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".Views.Conversas">
 
-    <include
-        layout="@layout/toolbar"></include>
+    <include layout="@layout/toolbar" />
 
     <View
         android:id="@+id/menu_line"
