--- a/app/src/main/res/layout/activity_editar_jogo.xml
+++ b/app/src/main/res/layout/activity_editar_jogo.xml
@@ -108,4 +108,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline4" />
 
+    <Button
+        android:id="@+id/deleteButton"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:background="#FF0000"
+        android:text="@string/deleteButton"
+        android:textColor="@android:color/background_light"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/confirmAdd" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
