--- a/app/src/main/res/menu/menu_biblioteca.xml
+++ b/app/src/main/res/menu/menu_biblioteca.xml
@@ -13,6 +13,7 @@
     <item
         android:id="@+id/action_pesquisar"
         android:title="@string/pesquisar"
+        android:orderInCategory="100"
         app:showAsAction="always"
         android:icon="@drawable/ic_search_white_24dp"/>
 </menu>
