--- a/app/src/main/res/layout/activity_conversas.xml
+++ b/app/src/main/res/layout/activity_conversas.xml
@@ -7,7 +7,11 @@
     android:orientation="vertical"
     tools:context=".Views.Conversas">
 
-    <include layout="@layout/toolbar" />
+    <include
+        android:id="@+id/include4"
+        layout="@layout/toolbar"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="-1dp" />
 
     <View
         android:id="@+id/menu_line"
@@ -16,7 +20,24 @@
         android:background="#808080"
         app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"></View> />
+        app:layout_constraintStart_toStartOf="parent"></View><![CDATA[ />
+
+
+
+    ]]>
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/chatImage"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:src="@drawable/blank_profile_picture"
+        app:civ_border_color="#FF000000"
+        app:civ_border_width="0.5dp"
+        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/include4" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
@@ -26,4 +47,15 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:menu="@menu/bottom_navigation" />
+
+    <TextView
+        android:id="@+id/chatName"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_marginTop="32dp"
+        android:text="TextView"
+        android:textSize="30dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/chatImage" />
 </androidx.constraintlayout.widget.ConstraintLayout>
