--- a/app/src/main/res/layout/custom_info_window.xml
+++ b/app/src/main/res/layout/custom_info_window.xml
@@ -3,7 +3,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center|top"
-    android:background="#FFFFFF"
+    android:background="@drawable/custom_border"
     android:clickable="false"
     android:orientation="vertical">
 
@@ -17,7 +17,7 @@
         android:layout_marginBottom="10dp"
         android:gravity="center"
         android:text="TextView"
-        android:textSize="18sp"
+        android:textSize="22sp"
         android:textStyle="bold" />
 
     <TextView
