--- a/app/src/main/res/layout/adapter_games.xml
+++ b/app/src/main/res/layout/adapter_games.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 
+<!--
+* @author Rodrigo Oliveira - rodrigoos19@gmail.com
+* @author Samuel Santana - samuel.santana1997@gmail.com
+-->
+
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
