Criando tela de conversas e permitindo enviar imagem pelo chat

--- a/app/src/main/res/layout/activity_conversas.xml
+++ b/app/src/main/res/layout/activity_conversas.xml
@@ -5,7 +5,8 @@
 * @author Samuel Santana - samuel.santana1997@gmail.com
 -->
 
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -32,18 +33,60 @@
 
     ]]>
 
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/chatImage"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:src="@drawable/blank_profile_picture"
-        app:civ_border_color="#FF000000"
-        app:civ_border_width="0.5dp"
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginTop="55dp"
         app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/include4" />
+        app:layout_constraintTop_toTopOf="parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:padding="5dp">
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/imageViewFotoConversa"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@drawable/blank_profile_picture"
+                app:civ_border_color="#FF000000"
+                app:civ_border_width="0.5dp"
+                app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.498"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/include4" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:orientation="vertical"
+                android:padding="5dp">
+
+                <TextView
+                    android:id="@+id/textNomeConversa"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Nome"
+                    android:textColor="@android:color/black"
+                    android:textSize="14sp"
+                    android:textStyle="bold"
+                    app:layout_constraintTop_toBottomOf="@+id/imageViewFotoConversa" />
+
+                <TextView
+                    android:id="@+id/textUltimaMensagemConversa"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Última Mensagem" />
+            </LinearLayout>
+
+        </LinearLayout>
+
+    </FrameLayout>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
@@ -54,14 +97,4 @@
         app:layout_constraintStart_toStartOf="parent"
         app:menu="@menu/bottom_navigation" />
 
-    <TextView
-        android:id="@+id/chatName"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_marginTop="32dp"
-        android:text="TextView"
-        android:textSize="30dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/chatImage" />
 </androidx.constraintlayout.widget.ConstraintLayout>
