--- a/app/src/main/res/layout/content_chat.xml
+++ b/app/src/main/res/layout/content_chat.xml
@@ -55,7 +55,7 @@
                 android:inputType="textPersonName" />
 
             <ImageView
-                android:id="@+id/imageView"
+                android:id="@+id/imageCamera"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:srcCompat="@drawable/ic_camera_chat_24dp" />
