--- a/app/src/main/res/layout/content_chat.xml
+++ b/app/src/main/res/layout/content_chat.xml
@@ -58,6 +58,7 @@
                 android:id="@+id/imageCamera"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:visibility="gone"
                 app:srcCompat="@drawable/ic_camera_chat_24dp" />
 
         </LinearLayout>
